# docs/swagger.yaml
@@ -1,14 +1,5 @@
 basePath: /v1
 definitions:
-  entity.User:
-    properties:
-      password:
-        example: "123456"
-        type: string
-      username:
-        example: alice
-        type: string
-    type: object
   v1.doLoginRequest:
     properties:
       password:
@@ -21,6 +12,36 @@ definitions:
     - password
     - username
     type: object
+  v1.doLoginWxRequest:
+    properties:
+      password:
+        example: "123456"
+        type: string
+      username:
+        example: alice
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  v1.loginResponse:
+    properties:
+      errcode:
+        example: 0
+        type: integer
+      token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw
+        type: string
+    type: object
+  v1.loginWxResponse:
+    properties:
+      errcode:
+        example: 0
+        type: integer
+      token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw
+        type: string
+    type: object
   v1.response:
     properties:
       message:
@@ -31,7 +52,7 @@ host: localhost:8820
 info:
   contact: {}
   description: Using a translation service as an example
-  title: Glogin API
+  title: guser API
   version: "1.0"
 paths:
   /user/login:
@@ -53,7 +74,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.User'
+            $ref: '#/definitions/v1.loginResponse'
         "400":
           description: Bad Request
           schema:
@@ -65,4 +86,35 @@ paths:
       summary: Login
       tags:
       - login
+  /user/loginwx:
+    post:
+      consumes:
+      - application/json
+      description: Login system By Weixin
+      operationId: loginWx
+      parameters:
+      - description: Login System By Weixin
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/v1.doLoginWxRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.loginWxResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: LoginWx
+      tags:
+      - loginWx
 swagger: "2.0"
